--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/aguirremra/ecommerce#readme",
   "dependencies": {
+    "auth0-js": "^8.11.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.0",
-    "sequelize": "^4.22.6"
+    "sequelize": "^4.22.6",
+	"bootstrap": "^3.3.7",
+    "jquery": "^3.2.1"
   }
 }
