--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "Mras*9969",
-    "database": "ecommerce",
+    "database": "flowers_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
