--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "dependencies": {
     "auth0-js": "^8.11.2",
     "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
     "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "jquery": "^3.2.1",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.0",
-    "sequelize": "^4.22.6",
-	"bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "sequelize": "^4.22.6"
   }
 }
