--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start": "DEBUG=express-sequelize node ./bin/www",
+    "test": "npm run test-unit && npm run test-integration",
+    "test-unit": "cross-env NODE_ENV=test ./node_modules/.bin/mocha test/unit/*.test.js",
+    "test-integration": "cross-env NODE_ENV=test ./node_modules/.bin/mocha test/integration/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -27,5 +31,12 @@
     "mysql": "^2.15.0",
     "mysql2": "^1.5.0",
     "sequelize": "^4.22.6"
+  },
+  "devDependencies": {
+    "bluebird": "^3.4.1",
+    "cross-env": "^3.1.3",
+    "expect.js": "^0.3.1",
+    "mocha": "^3.0.2",
+    "supertest": "^2.0.0"
   }
 }
